Fix borked deployers and api spec
